# websocketproxy

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  docker-compose.yml
.github/workflows/: release.yml
.zed/: debug.json
openrc/: websockproxy-relay.confd  websockproxy-relay.initd
prometheus/: prometheus.yml
scripts/: bridge-tap.sh
src/: main.rs
src/network/: bridge.rs  mod.rs  nat.rs
