[package]
name = "websockproxy-relay"
version = "0.1.0"
description = "Rust Layer 2 relay bridging raw Ethernet frames between WebSocket clients and a TAP device"
edition = "2024"
repository = "https://github.com/socoldkiller/websocketproxy"
rust-version = "1.85"
keywords = ["websocket", "ethernet", "tap", "relay"]
categories = ["network-programming"]

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
cargo = { level = "deny", priority = -1 }
cargo_common_metadata = "allow"
multiple_crate_versions = "allow"
dbg_macro = "deny"
expect_used = "deny"
panic = "deny"
print_stderr = "deny"
print_stdout = "deny"
todo = "deny"
unimplemented = "deny"
unwrap_used = "deny"

[dependencies]
anyhow = "1.0"
arc-swap = "1.7"
axum = { version = "0.8.8", features = ["ws"] }
bytes = "1.10"
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tun = { version = "0.7.13", features = ["async"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
